--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>📚 自学ネタ1000 — ひまつぶしと学びの庭（GitHub向け）</title>
+<title>📚 自学ネタ </title>
 <style>
   :root{
     --bg:#fffef8; --card:#fff; --accent:#2962ff; --muted:#666;
@@ -38,7 +38,7 @@
 </head>
 <body>
 <header>
-  📚 自学ネタ1000 — ひまつぶしと学びの庭（自学専用・フィルター＆出力付き）
+  📚 自学ネタ
 </header>
 
 <div class="container">
@@ -90,9 +90,7 @@
     </div>
   </div>
 
-  <footer>保存はブラウザ側（お気に入りは localStorage）。GitHub に置く場合はこのファイルをそのまま `study1000.html` として追加してね。</footer>
-</div>
-
+  
 <script>
 /* -------------------------
    データ＆生成ロジック
