--- a/index.html
+++ b/index.html
@@ -1,86 +1,103 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="UTF-8">
 <title>自学ネタ</title>
 <style>
-  body{font-family:"Noto Sans JP",sans-serif;margin:0;background:#fffef8;color:#222;}
-  header{background:#ffd54f;padding:14px 16px;font-weight:800;border-bottom:1px solid rgba(0,0,0,0.06);}
-  .container{max-width:1100px;margin:18px auto;padding:0 16px;}
-  .controls{display:flex;flex-wrap:wrap;gap:8px;align-items:center;margin:12px 0;}
-  label{font-weight:700;margin-right:6px;}
-  select,input,button{padding:8px;border-radius:8px;border:1px solid #ddd;font-size:0.95rem;}
-  button{background:#2962ff;color:#fff;border:none;cursor:pointer;font-weight:700;}
-  .meta{margin-left:auto;color:#666;font-size:0.95rem;}
-  .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:10px;}
-  .card{background:#fff;padding:12px;border-radius:10px;box-shadow:0 4px 12px rgba(0,0,0,0.05);}
-  .badge{display:inline-block;padding:5px 8px;border-radius:999px;font-weight:700;font-size:0.82rem;margin-right:8px;}
-  .badge.genre{background:#f0f7ff;color:#0366d6;}
-  .badge.time{background:#f7f7f7;color:#444;}
-  .title{font-weight:800;margin-top:8px;line-height:1.4;}
+  body { font-family: Arial, sans-serif; margin: 20px; }
+  h1 { text-align: center; }
+  #filters { margin-bottom: 20px; }
+  select, input { margin-right: 10px; }
+  .task { border: 1px solid #ccc; padding: 10px; margin-bottom: 5px; }
+  .task span { font-weight: bold; }
 </style>
 </head>
 <body>
-<header>自学ネタ</header>
+<h1>自学ネタ</h1>
 
-<div class="container">
-  <div class="controls">
-    <label>ジャンル：</label>
-    <select id="genre"><option value="all">すべて</option></select>
-    <label>時間：</label>
-    <select id="time"><option value="all">すべて</option></select>
-    <label>検索：</label>
-    <input id="search" placeholder="キーワード...">
-    <button id="clear">クリア</button>
-    <div class="meta">表示：<span id="count">0</span>件</div>
-  </div>
+<div id="filters">
+  ジャンル:
+  <select id="genreFilter">
+    <option value="">すべて</option>
+    <option value="理科">理科</option>
+    <option value="社会">社会</option>
+    <option value="国語">国語</option>
+    <option value="算数">算数</option>
+    <option value="英語">英語</option>
+    <option value="生活">生活</option>
+    <option value="図工">図工</option>
+    <option value="音楽">音楽</option>
+    <option value="プログラミング">プログラミング</option>
+    <option value="雑学">雑学</option>
+  </select>
 
-  <div class="grid" id="grid"></div>
+  所要時間:
+  <select id="timeFilter">
+    <option value="">すべて</option>
+    <option value="約5分">約5分</option>
+    <option value="約10分">約10分</option>
+    <option value="約15分">約15分</option>
+    <option value="約20分">約20分</option>
+    <option value="約30分">約30分</option>
+  </select>
+
+  キーワード検索:
+  <input type="text" id="searchInput" placeholder="例: 観察">
+
+  <button onclick="applyFilters()">絞り込む</button>
+  <button onclick="resetFilters()">リセット</button>
 </div>
 
-<!-- データファイル読み込み -->
+<div id="taskList"></div>
+
 <script src="data1.js"></script>
 <script src="data2.js"></script>
 <script src="data3.js"></script>
 <script src="data4.js"></script>
 <script src="data5.js"></script>
-
 <script>
-const genreSel=document.getElementById("genre");
-const timeSel=document.getElementById("time");
-const search=document.getElementById("search");
-const clearBtn=document.getElementById("clear");
-const grid=document.getElementById("grid");
-const count=document.getElementById("count");
-const GENRES=["理科","社会","国語","算数","英語","生活","図工","音楽","プログラミング","雑学"];
-const TIMES=["約5分","約10分","約15分","約20分","約30分"];
-GENRES.forEach(g=>{const o=document.createElement("option");o.value=g;o.textContent=g;genreSel.appendChild(o)});
-TIMES.forEach(t=>{const o=document.createElement("option");o.value=t;o.textContent=t;timeSel.appendChild(o)});
-let ALL_ITEMS=[];
-function updateDisplay(){
-  const g=genreSel.value,t=timeSel.value,q=(search.value||"").toLowerCase();
-  const f=ALL_ITEMS.filter(it=>{
-    if(g!=="all"&&it.genre!==g)return false;
-    if(t!=="all"&&it.time!==t)return false;
-    if(q&&!(it.text.toLowerCase().includes(q)))return false;
-    return true;
-  });
-  grid.innerHTML="";
-  f.forEach(it=>{
-    const d=document.createElement("div");
-    d.className="card";
-    d.innerHTML=`<span class="badge genre">${it.genre}</span><span class="badge time">${it.time}</span><div class="title">${it.text}</div>`;
-    grid.appendChild(d);
-  });
-  count.textContent=f.length;
-}
-genreSel.onchange=timeSel.onchange=search.oninput=updateDisplay;
-clearBtn.onclick=()=>{genreSel.value="all";timeSel.value="all";search.value="";updateDisplay();}
-window.addEventListener("DOMContentLoaded",()=>{
-  ALL_ITEMS=[...(window.data1||[]),(window.data2||[]),(window.data3||[]),(window.data4||[]),(window.data5||[])].flat();
-  updateDisplay();
-});
+  // すべてのデータをまとめる
+  const allTasks = [...window.data1, ...window.data2, ...window.data3, ...window.data4, ...window.data5];
+
+  function displayTasks(tasks) {
+    const container = document.getElementById('taskList');
+    container.innerHTML = '';
+    if(tasks.length === 0) {
+      container.innerHTML = '<p>該当する自学ネタはありません。</p>';
+      return;
+    }
+    tasks.forEach(task => {
+      const div = document.createElement('div');
+      div.className = 'task';
+      div.innerHTML = `<span>ジャンル:</span> ${task.genre} | <span>所要時間:</span> ${task.time}<br>${task.text}`;
+      container.appendChild(div);
+    });
+  }
+
+  function applyFilters() {
+    const genre = document.getElementById('genreFilter').value;
+    const time = document.getElementById('timeFilter').value;
+    const keyword = document.getElementById('searchInput').value.trim();
+
+    const filtered = allTasks.filter(task => {
+      const genreMatch = genre ? task.genre === genre : true;
+      const timeMatch = time ? task.time === time : true;
+      const keywordMatch = keyword ? task.text.includes(keyword) : true;
+      return genreMatch && timeMatch && keywordMatch;
+    });
+
+    displayTasks(filtered);
+  }
+
+  function resetFilters() {
+    document.getElementById('genreFilter').value = '';
+    document.getElementById('timeFilter').value = '';
+    document.getElementById('searchInput').value = '';
+    displayTasks(allTasks);
+  }
+
+  // 最初は全件表示
+  displayTasks(allTasks);
 </script>
 </body>
 </html>
