--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
-    background: linear-gradient(135deg, #fceabb, #f8b500);
+    background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -18,9 +18,9 @@
   h1 {
     text-align: center;
     margin: 20px 0;
-    font-size: 2.2em;
+    font-size: 2.5em;
     color: #333;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
 
   .filter {
@@ -32,10 +32,11 @@
   }
 
   select, input {
-    padding: 8px 10px;
-    border-radius: 5px;
+    padding: 8px 12px;
+    border-radius: 6px;
     border: none;
     font-size: 1em;
+    outline: none;
   }
 
   .ne-list {
@@ -48,34 +49,28 @@
   }
 
   .ne-item {
-    background: #fff;
     padding: 15px;
-    border-radius: 12px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    border-radius: 14px;
+    color: #fff;
     transition: transform 0.2s, box-shadow 0.2s;
+    cursor: default;
   }
 
   .ne-item:hover {
-    transform: translateY(-5px);
+    transform: translateY(-6px);
     box-shadow: 0 12px 25px rgba(0,0,0,0.3);
   }
 
-  .genre {
-    font-weight: bold;
-    color: #ff6f61;
-    margin-bottom: 5px;
-  }
+  .genre { font-weight: bold; margin-bottom: 5px; }
+  .time { font-size: 0.85em; margin-bottom: 10px; }
+  .text { font-size: 1em; line-height: 1.4; }
 
-  .time {
-    font-size: 0.85em;
-    color: #555;
-    margin-bottom: 10px;
-  }
-
-  .text {
-    font-size: 1em;
-    line-height: 1.4;
-  }
+  /* ジャンルごとに色分け */
+  .理科 { background: #4CAF50; }
+  .社会 { background: #FF9800; }
+  .スポーツ { background: #2196F3; }
+  .プログラミング { background: #9C27B0; }
+  .アート { background: #E91E63; }
 </style>
 </head>
 <body>
@@ -121,7 +116,7 @@
 <script src="data12.js"></script>
 <script src="data13.js"></script>
 <script src="data14.js"></script>
-<script src="data15.js"></script>
+<script src="data14.js"></script>
 
 <script>
 const allData = [].concat(
@@ -150,7 +145,7 @@ function renderList() {
 
   filtered.forEach(item => {
     const div = document.createElement('div');
-    div.className = 'ne-item';
+    div.className = `ne-item ${item.genre}`;
     div.innerHTML = `<div class="genre">${item.genre}</div>
                      <div class="time">${item.time}</div>
                      <div class="text">${item.text}</div>`;
