--- a/index.html
+++ b/index.html
@@ -66,11 +66,19 @@
   .text { font-size: 1em; line-height: 1.4; }
 
   /* ジャンルごとに色分け */
-  .理科 { background: #4CAF50; }
-  .社会 { background: #FF9800; }
-  .スポーツ { background: #2196F3; }
-  .プログラミング { background: #9C27B0; }
-  .アート { background: #E91E63; }
+  算数 { background: #f44336; }
+.国語 { background: #ff9800; }
+.理科 { background: #4CAF50; }
+.社会 { background: #FFEB3B; color:#333; }
+.図工 { background: #795548; }
+.音楽 { background: #2196F3; }
+.英語 { background: #009688; }
+.工作 { background: #9C27B0; }
+.生活 { background: #607D8B; }
+.雑学 { background: #FF5722; }
+.スポーツ { background: #3F51B5; }
+.プログラミング { background: #673AB7; }
+.アート { background: #E91E63; }
 </style>
 </head>
 <body>
@@ -80,9 +88,17 @@
 <div class="filter">
   <label for="genreFilter">ジャンル:</label>
   <select id="genreFilter">
-    <option value="">すべて</option>
+     <option value="">すべて</option>
+    <option value="算数">算数</option>
+    <option value="国語">国語</option>
     <option value="理科">理科</option>
     <option value="社会">社会</option>
+    <option value="図工">図工</option>
+    <option value="音楽">音楽</option>
+    <option value="英語">英語</option>
+    <option value="工作">工作</option>
+    <option value="生活">生活</option>
+    <option value="雑学">雑学</option>
     <option value="スポーツ">スポーツ</option>
     <option value="プログラミング">プログラミング</option>
     <option value="アート">アート</option>
@@ -94,6 +110,8 @@
     <option value="約10分">約10分</option>
     <option value="約15分">約15分</option>
     <option value="約20分">約20分</option>
+    <option value="約25分">約25分</option>
+    <option value="約30分">約30分</option>
   </select>
 
   <label for="searchInput">検索:</label>
