--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
   .text { font-size: 1em; line-height: 1.4; }
 
   /* ジャンルごとに色分け */
-  算数 { background: #f44336; }
+.算数 { background: #2196F3; }
 .国語 { background: #ff9800; }
 .理科 { background: #4CAF50; }
 .社会 { background: #FFEB3B; color:#333; }
 .図工 { background: #795548; }
-.音楽 { background: #2196F3; }
+.音楽 { background: #f44336;; }
 .英語 { background: #009688; }
 .工作 { background: #9C27B0; }
 .生活 { background: #607D8B; }
