--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
   .text { font-size: 1em; line-height: 1.4; }
 
   /* ジャンルごとに色分け */
-.算数 { background: #2196F3; }
-.国語 { background: #ff9800; }
-.理科 { background: #4CAF50; }
-.社会 { background: #FFEB3B; color:#333; }
-.図工 { background: #795548; }
-.音楽 { background: #f44336;; }
-.英語 { background: #009688; }
-.工作 { background: #9C27B0; }
-.生活 { background: #607D8B; }
-.雑学 { background: #FF5722; }
+.算数 { background: #41a3f2; }
+.国語 { background: #f76d60; }
+.理科 { background: #6afc49; }
+.社会 { background: #fae843; color:#333; }
+.図工 { background: #fab143; }
+.音楽 { background: #f7b0dc; }
+.英語 { background: #d2b0f7; }
+.工作 { background: #b0f7c5; }
+.生活 { background: #e09f36; }
+.雑学 { background: #4d36e0; }
 .スポーツ { background: #3F51B5; }
 .プログラミング { background: #673AB7; }
 .アート { background: #E91E63; }
