--- a/index.html
+++ b/index.html
@@ -1,274 +1,184 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>自学ネタ</title>
 <style>
-  :root{
-    --card-radius:14px;
-    --gap:15px;
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  body{
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    margin:0;
-    background: linear-gradient(135deg,#f5f7fa,#c3cfe2);
-    min-height:100vh;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    color:#111;
-  }
-  h1{
-    margin:20px 0;
-    font-size:2.4rem;
-    text-shadow:1px 1px 3px rgba(0,0,0,0.12);
-  }
-  .filter{
-    display:flex;
-    flex-wrap:wrap;
-    gap:10px;
-    justify-content:center;
-    margin-bottom:18px;
-  }
-  select,input{
-    padding:8px 12px;
-    border-radius:8px;
-    border:none;
-    font-size:1rem;
-    outline:none;
-    box-shadow:0 2px 6px rgba(0,0,0,0.06);
-  }
-  .ne-list{
-    width:90%;
-    max-width:1200px;
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-    gap:var(--gap);
-    margin-bottom:18px;
-  }
-  .ne-item{
-    padding:14px;
-    border-radius:var(--card-radius);
-    color:#fff;
-    transition:transform .18s, box-shadow .18s;
-    box-shadow:0 8px 18px rgba(0,0,0,0.12);
-  }
-  .ne-item:hover{
-    transform:translateY(-6px);
-    box-shadow:0 14px 30px rgba(0,0,0,0.16);
-  }
-  .genre{ font-weight:700; margin-bottom:6px; }
-  .time{ font-size:.86rem; opacity:.9; margin-bottom:8px; }
-  .text{ font-size:1rem; line-height:1.5; color:inherit; }
 
-  /* ジャンルカラー（必要ならここで追加・調整） */
-  .g-san { background:#41a3f2; }      /* 算数 */
-  .g-kokugo { background:#f76d60; }   /* 国語 */
-  .g-rika { background:#6afc49; }     /* 理科 */
-  .g-shakai { background:#fae843; color:#222; } /* 社会 */
-  .g-zukou { background:#fab143; }    /* 図工 */
-  .g-ongaku { background:#f7b0dc; }   /* 音楽 */
-  .g-eigo { background:#d2b0f7; }     /* 英語 */
-  .g-kousaku { background:#b0f7c5; }  /* 工作 */
-  .g-seikatsu { background:#e09f36; } /* 生活 */
-  .g-zatsugaku { background:#4d36e0; }/* 雑学 */
-  .g-sports { background:#3F51B5; }   /* スポーツ */
-  .g-program { background:#673AB7; }  /* プログラミング */
-  .g-art { background:#E91E63; }      /* アート */
-
-  #moreBtn{
-    padding:10px 18px;
-    border-radius:10px;
-    border:none;
-    background:#222;
-    color:#fff;
-    cursor:pointer;
-    margin-bottom:40px;
-    box-shadow:0 6px 16px rgba(0,0,0,0.12);
+  h1 {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 2.5em;
+    color: #333;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
-  #moreBtn:hover{ background:#333; }
 
-  .empty-msg{ text-align:center; width:100%; color:#333; padding:30px 0; }
-  @media (max-width:520px){
-    h1{ font-size:1.6rem; }
-    .ne-list{ gap:10px; }
+  .filter {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 20px;
   }
+
+  select, input {
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: none;
+    font-size: 1em;
+    outline: none;
+  }
+
+  .ne-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 15px;
+    width: 90%;
+    max-width: 1200px;
+    margin-bottom: 50px;
+  }
+
+  .ne-item {
+    padding: 15px;
+    border-radius: 14px;
+    color: #fff;
+    transition: transform 0.2s, box-shadow 0.2s;
+    cursor: default;
+  }
+
+  .ne-item:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 12px 25px rgba(0,0,0,0.3);
+  }
+
+  .genre { font-weight: bold; margin-bottom: 5px; }
+  .time { font-size: 0.85em; margin-bottom: 10px; }
+  .text { font-size: 1em; line-height: 1.4; }
+
+  /* ジャンルごとに色分け */
+.算数 { background: #41a3f2; }
+.国語 { background: #f76d60; }
+.理科 { background: #6afc49; }
+.社会 { background: #fae843; color:#333; }
+.図工 { background: #fab143; }
+.音楽 { background: #f7b0dc; }
+.英語 { background: #d2b0f7; }
+.工作 { background: #b0f7c5; }
+.生活 { background: #e09f36; }
+.雑学 { background: #4d36e0; }
+.スポーツ { background: #3F51B5; }
+.プログラミング { background: #673AB7; }
+.アート { background: #E91E63; }
 </style>
 </head>
 <body>
-  <h1>自学ネタ</h1>
 
-  <div class="filter" role="region" aria-label="フィルター">
-    <label for="genreFilter">ジャンル:</label>
-    <select id="genreFilter" aria-label="ジャンル">
-      <option value="">すべて</option>
-      <option>算数</option>
-      <option>国語</option>
-      <option>理科</option>
-      <option>社会</option>
-      <option>図工</option>
-      <option>音楽</option>
-      <option>英語</option>
-      <option>工作</option>
-      <option>生活</option>
-      <option>雑学</option>
-      <option>スポーツ</option>
-      <option>プログラミング</option>
-      <option>アート</option>
-    </select>
+<h1>自学ネタ</h1>
 
-    <label for="timeFilter">所要時間:</label>
-    <select id="timeFilter" aria-label="所要時間">
-      <option value="">すべて</option>
-      <option>約10分</option>
-      <option>約15分</option>
-      <option>約20分</option>
-      <option>約25分</option>
-      <option>約30分</option>
-    </select>
+<div class="filter">
+  <label for="genreFilter">ジャンル:</label>
+  <select id="genreFilter">
+     <option value="">すべて</option>
+    <option value="算数">算数</option>
+    <option value="国語">国語</option>
+    <option value="理科">理科</option>
+    <option value="社会">社会</option>
+    <option value="図工">図工</option>
+    <option value="音楽">音楽</option>
+    <option value="英語">英語</option>
+    <option value="工作">工作</option>
+    <option value="生活">生活</option>
+    <option value="雑学">雑学</option>
+    <option value="スポーツ">スポーツ</option>
+    <option value="プログラミング">プログラミング</option>
+    <option value="アート">アート</option>
+  </select>
 
-    <label for="searchInput">検索:</label>
-    <input id="searchInput" type="search" placeholder="キーワードで検索" aria-label="キーワード検索" />
-  </div>
+  <label for="timeFilter">所要時間:</label>
+  <select id="timeFilter">
+    <option value="">すべて</option>
+    <option value="約10分">約10分</option>
+    <option value="約15分">約15分</option>
+    <option value="約20分">約20分</option>
+    <option value="約25分">約25分</option>
+    <option value="約30分">約30分</option>
+  </select>
 
-  <div class="ne-list" id="neList" aria-live="polite"></div>
-  <button id="moreBtn" type="button">もっと見る</button>
+  <label for="searchInput">検索:</label>
+  <input type="text" id="searchInput" placeholder="キーワードで検索">
+</div>
 
-  <!-- dataファイルを読み込む（重複しないように） -->
-  <script src="date1.js"></script>
-  <script src="date2.js"></script>
-  <script src="date3.js"></script>
-  <script src="date4.js"></script>
-  <script src="date5.js"></script>
-  <script src="date6.js"></script>
-  <script src="date7.js"></script>
-  <script src="date8.js"></script>
-  <script src="date9.js"></script>
-  <script src="date10.js"></script>
-  <script src="date11.js"></script>
-  <script src="date12.js"></script>
-  <script src="date13.js"></script>
-  <script src="date14.js"></script>
-  <script src="date15.js"></script>
+<div class="ne-list" id="neList"></div>
 
-  <script>
-  (function(){
-    // 設定
-    const BATCH = 50; // 1回に表示する件数
-    // すべての window.dateX / window.dataX を安全に結合
-    const arrays = [];
-    for(let i=1;i<=15;i++){
-      arrays.push(window['date'+i] || []); // primary: window.date1...
-      arrays.push(window['data'+i] || []); // fallback: window.data1...
-    }
-    // flatten
-    const allData = arrays.flat().filter(Boolean).map(normalizeItem);
+<script src="data1.js"></script>
+<script src="data2.js"></script>
+<script src="data3.js"></script>
+<script src="data4.js"></script>
+<script src="data5.js"></script>
+<script src="data6.js"></script>
+<script src="data7.js"></script>
+<script src="data8.js"></script>
+<script src="data9.js"></script>
+<script src="data10.js"></script>
+<script src="data11.js"></script>
+<script src="data12.js"></script>
+<script src="data13.js"></script>
+<script src="data14.js"></script>
+<script src="data14.js"></script>
 
-    // 要素取得
-    const neList = document.getElementById('neList');
-    const genreFilter = document.getElementById('genreFilter');
-    const timeFilter = document.getElementById('timeFilter');
-    const searchInput = document.getElementById('searchInput');
-    const moreBtn = document.getElementById('moreBtn');
+<script>
+const allData = [].concat(
+  window.data1, window.data2, window.data3, window.data4, window.data5,
+  window.data6, window.data7, window.data8, window.data9, window.data10,
+  window.data11, window.data12, window.data13, window.data14
+);
 
-    // 状態
-    let filtered = allData.slice();
-    let displayed = 0;
+const neList = document.getElementById('neList');
+const genreFilter = document.getElementById('genreFilter');
+const timeFilter = document.getElementById('timeFilter');
+const searchInput = document.getElementById('searchInput');
 
-    // 正規化：空白トリム、型保証
-    function normalizeItem(it){
-      const g = (it.genre || '').toString().trim();
-      const t = (it.time || '').toString().trim();
-      const txt = (it.text || it.description || it.content || '').toString().trim();
-      return { genre: g, time: t, text: txt };
-    }
+function renderList() {
+  const genre = genreFilter.value;
+  const time = timeFilter.value;
+  const keyword = searchInput.value.toLowerCase();
 
-    // ジャンル名を安全なクラス名に変換
-    function genreToClassName(genre){
-      if(!genre) return 'g-unknown';
-      // 漢字／ひらがな／カナをローマ字変換は省くが英数字ハイフンのみ残す形に正規化
-      // より簡単に、非英数字をハイフンに置換し、連続ハイフンをまとめる
-      return 'g-' + genre.toLowerCase().replace(/[^\w]+/g,'-').replace(/^-+|-+$/g,'').replace(/--+/g,'-');
-    }
+  neList.innerHTML = '';
 
-    // 描画（追加表示） reset=trueなら最初から描画
-    function render(reset){
-      if(reset){
-        displayed = 0;
-        neList.innerHTML = '';
-      }
-      const slice = filtered.slice(displayed, displayed + BATCH);
-      if(slice.length === 0 && displayed === 0){
-        neList.innerHTML = '<div class="empty-msg">該当するネタが見つかりません。</div>';
-        moreBtn.style.display = 'none';
-        return;
-      }
-      slice.forEach(item=>{
-        const div = document.createElement('div');
-        const safeClass = genreToClassName(item.genre);
-        div.className = `ne-item ${safeClass}`;
-        div.innerHTML = `<div class="genre">${escapeHtml(item.genre)}</div>
-                         <div class="time">${escapeHtml(item.time)}</div>
-                         <div class="text">${escapeHtml(item.text)}</div>`;
-        neList.appendChild(div);
-      });
-      displayed += slice.length;
-      moreBtn.style.display = displayed < filtered.length ? 'inline-block' : 'none';
-    }
+  const filtered = allData.filter(item => {
+    return (!genre || item.genre === genre)
+      && (!time || item.time === time)
+      && (!keyword || item.text.toLowerCase().includes(keyword));
+  });
 
-    // フィルタリング（厳密一致 for genre/time,部分一致 for keyword）
-    function applyFilter(){
-      const selGenre = (genreFilter.value || '').toString().trim();
-      const selTime = (timeFilter.value || '').toString().trim();
-      const kw = (searchInput.value || '').toString().trim().toLowerCase();
-      filtered = allData.filter(item=>{
-        const g = (item.genre||'').trim();
-        const t = (item.time||'').trim();
-        const txt = (item.text||'').toLowerCase();
-        const genreOk = !selGenre || g === selGenre;
-        const timeOk = !selTime || t === selTime;
-        const kwOk = !kw || txt.includes(kw);
-        return genreOk && timeOk && kwOk;
-      });
-      // reset display
-      neList.innerHTML = '';
-      render(true);
-    }
+  filtered.forEach(item => {
+    const div = document.createElement('div');
+    div.className = `ne-item ${item.genre}`;
+    div.innerHTML = `<div class="genre">${item.genre}</div>
+                     <div class="time">${item.time}</div>
+                     <div class="text">${item.text}</div>`;
+    neList.appendChild(div);
+  });
+}
 
-    // シンプルなHTMLエスケープ（表示用）
-    function escapeHtml(str){
-      return String(str)
-        .replace(/&/g,'&amp;')
-        .replace(/</g,'&lt;')
-        .replace(/>/g,'&gt;')
-        .replace(/"/g,'&quot;')
-        .replace(/'/g,'&#039;');
-    }
+// 初期表示
+renderList();
 
-    // デバウンス helper
-    function debounce(fn, wait){
-      let t;
-      return function(...args){
-        clearTimeout(t);
-        t = setTimeout(()=>fn.apply(this,args), wait);
-      };
-    }
+// イベント
+genreFilter.addEventListener('change', renderList);
+timeFilter.addEventListener('change', renderList);
+searchInput.addEventListener('input', renderList);
+</script>
 
-    // 初期表示
-    render(true);
-
-    // イベント（デバウンス付与）
-    genreFilter.addEventListener('change', applyFilter);
-    timeFilter.addEventListener('change', applyFilter);
-    searchInput.addEventListener('input', debounce(applyFilter, 300));
-    moreBtn.addEventListener('click', ()=>render(false));
-
-    // もしデータが空で読み込まれていない場合、consoleにヒント
-    if(allData.length === 0){
-      console.warn('注意: date1.js 〜 date15.js のいずれか、または window.dateX / window.dataX にデータが読み込まれていません。');
-    }
-  })();
-  </script>
 </body>
 </html>
