--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <script src="data14.js"></script>
 <script src="data14.js"></script>
 <script src="data15.js"></script>
-<script src="data16.js"></script
+<script src="data16.js"></script>
 
 <script>
 const allData = [].concat(
