--- a/index.html
+++ b/index.html
@@ -137,14 +137,13 @@
 <script src="data14.js"></script>
 <script src="data15.js"></script>
 <script src="data16.js"></script>
-<script src="data17.js"></script>
 
 <script>
 const allData = [].concat(
-  window.data1, window.data2, window.data3, window.data4, window.data5,
-  window.data6, window.data7, window.data8, window.data9, window.data10,
-  window.data11, window.data12, window.data13, window.data14, window.data15,
-  window.data16, window.data17
+  window.data1 || [], window.data2 || [], window.data3 || [], window.data4 || [], window.data5 || [],
+  window.data6 || [], window.data7 || [], window.data8 || [], window.data9 || [], window.data10 || [],
+  window.data11 || [], window.data12 || [], window.data13 || [], window.data14 || [], window.data15 || [],
+  window.data16 || []
 );
 
 const neList = document.getElementById('neList');
