--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   .図工 { background: #fab143; }
   .音楽 { background: #f7b0dc; }
   .英語 { background: #d2b0f7; }
-  .工作 { background: #b0f7c5; }
+  .工作 { background: #1cd45f; }
   .生活 { background: #e09f36; }
   .雑学 { background: #4d36e0; }
   .スポーツ { background: #3F51B5; }
